--- a/css/style.css
+++ b/css/style.css
@@ -372,3 +372,9 @@
   background-color: #333;
   color: #fff;
 }
+
+.dark-mode .footerIletisim{
+  background-color: #15151a;
+  color: #fff;
+}
+
